refactor(diag): create new Diag_List type; use in one spot
I don't like Buffering_Diag_Reporter. Create a new Diag_List type,
decoupled from Diag_Reporter, which we can use to "just" store a list
of diagnostics (hence its name).

To test the waters, use Diag_List in place of Buffering_Diag_Reporter
in one spot in the Lexer.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -315,6 +315,8 @@ quick_lint_js_add_library(
   quick-lint-js/diag/buffering-diag-reporter.h
   quick-lint-js/diag/diag-code-list.cpp
   quick-lint-js/diag/diag-code-list.h
+  quick-lint-js/diag/diag-list.cpp
+  quick-lint-js/diag/diag-list.h
   quick-lint-js/diag/diag-reporter.cpp
   quick-lint-js/diag/diag-reporter.h
   quick-lint-js/diag/diagnostic-formatter.cpp
